# robolectric

./: .blazeproject  .classpath  .gitignore  .gitmodules  .pairs  .project  .rvmrc  .travis.yml  ARCHITECTURE.md  Android.mk  AndroidManifest.xml  CIDER_AGENT.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  MIT.LICENSE  OWNERS  README  README.md  WORKSPACE  _config.yml  activity-lifecycle.md  android-base  android_jars.md  apklibs.md  build.gradle  build.gradle.kts  build.properties  build.xml  circle.yml  cloudbuild.yaml  contributor_guidelines.md  copybara_version.txt  customizing.html.md  customizing.md  default.properties  dependencies.gradle  (+53 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.gemini/: config.yaml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_native_runtime.yml  check_aggregateDocs.yml  check_code_formatting.yml  check_code_style.yml  check_java_formatting.yml  codeql.yml  copybara_build_and_test.yml  dependency_guard.yml  gradle_tasks_validation.yml  gradle_wrapper_update.yml  gradle_wrapper_validation.yml  graphics_tests.yml  publish_javadoc.yml  sync_google_master.yml  tests.yml  tests_for_sdks.yml  update_contributor_guidelines_webpage.yml  validate_commit_message.yml
_includes/: toc.html
_layouts/: default.html
_site/: index.html  user-guide.html
_site/css/: screen.css
annotations/: Android.mk  build.gradle  build.gradle.kts
app-under-test/: build.gradle
bazel/: BUILD  gen-deps.py  robolectric.bzl  setup_robolectric.bzl
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
buildSrc/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
contributions/: bounty-1777282502.md
css/: screen.css
cts-support/: build.gradle
doclet/: build.gradle
docs/: split-apk-aab-support-report.md
errorprone/: build.gradle  build.gradle.kts
errorprone/dependencies/: runtimeClasspath.txt
gradle/: libs.versions.toml
gradle-plugin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
integration-tests/: build.gradle
integration-tests/dependency-on-stubs/: build.gradle
integration-tests/gradle/: build.gradle
integration-tests/libphonenumber/: build.gradle
integration-tests/mockito/: build.gradle
integration-tests/mockito-experimental/: build.gradle
integration-tests/powermock/: build.gradle
integration_tests/agp/: build.gradle  build.gradle.kts
integration_tests/android_support_test/: AndroidManifest.xml  build.gradle
integration_tests/androidx/: AndroidManifest.xml  build.gradle  (+1 more)
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
junit/: Android.mk  build.gradle  build.gradle.kts
kotlin/: build.gradle
nativeruntime/: NativeRuntimeLoader.java  SQLiteConnectionNatives.java  build.gradle  build.gradle.kts
nativeruntime/cpp/: CMakeLists.txt
nativeruntime/cpp/androidfw/: CMakeLists.txt  CursorWindow.cpp
nativeruntime/cpp/androidfw/include/androidfw/: CursorWindow.h
nativeruntime/cpp/base/include/android-base/: macros.h
nativeruntime/cpp/cmake/: FindJNI.cmake
nativeruntime/cpp/jni/: AndroidRuntime.cpp  AndroidRuntime.h  JNIMain.cpp  robo_android_database_SQLiteCommon.h  robo_android_database_SQLiteConnection.cpp
nativeruntime/cpp/libcutils/: CMakeLists.txt  ashmem.cpp
nativeruntime/cpp/libcutils/include/cutils/: ashmem.h
nativeruntime/cpp/liblog/: CMakeLists.txt  log.c
nativeruntime/cpp/liblog/include/log/: log.h
nativeruntime/cpp/libnativehelper/include/nativehelper/: JNIHelp.h  scoped_local_ref.h
nativeruntime/cpp/libutils/: CMakeLists.txt  SharedBuffer.cpp  String16.cpp
nativeruntime/cpp/libutils/include/utils/: Errors.h
perf/: build.gradle
pluginapi/: build.gradle  build.gradle.kts
preinstrumented/: build.gradle  build.gradle.kts
processor/: Android.mk  README.md  build.gradle  build.gradle.kts
processor-ksp/: README.md  build.gradle.kts
resources/: Android.mk  build-resources.sh  build.gradle  build.gradle.kts
robolectric/: Android.mk  AndroidManifest.xml  build.gradle  build.gradle.kts  cloudbuild.yaml  pom.xml
robolectric-annotations/: build.gradle  pom.xml
robolectric-core/: build.gradle
robolectric-fakehttp/: pom.xml
robolectric-instrumentation/: build.gradle
robolectric-instrumentation-annotations/: build.gradle
robolectric-junit/: build.gradle
robolectric-processor/: LICENSE.txt  README.md  build.gradle  pom.xml
robolectric-res/: pom.xml
robolectric-resources/: build.gradle  pom.xml
robolectric-sandbox/: build.gradle
robolectric-shadows/: pom.xml
robolectric-utils/: build.gradle  pom.xml
sandbox/: Android.mk  build.gradle  build.gradle.kts
scripts/: README.md  build-android-prebuilt.sh  build-android.sh  build-artifacts.sh  build-resources.rb  build-resources.sh  create_legacy_http_bundle.sh  deploy-android.sh  deploy-release.sh  deploy-snapshot.sh  find-sources.rb  fix-ptrs.rb  generate-r.rb  install-android-prebuilt.sh  install-dependencies.rb  install-dependencies.sh  install-maps-jar.sh  install-multidex-aar.sh  install-robolectric-shadows.sh  install-robolectric.bat  install-robolectric.sh  install-snapshot.sh  install-support-jar.sh  mavenize-android.sh  mvn_settings.xml  pom_template.xml  release-notes-template.md  repackage-android.sh  run-google-java-format-diff.sh  sync-android.sh  update-cpp.sh
shadow-api/: build.gradle
shadowapi/: Android.mk  build.gradle  build.gradle.kts
shadows-api/: build.gradle
shadows-support-v4/: pom.xml
simulator/: build.gradle.kts
simulator-gradle-plugin/: build.gradle.kts
src/: overview.html
test/: TestAndroidManifestWithPackageName.xml
testapp/: build.gradle  build.gradle.kts  lint-baseline.xml
testutil/: build.gradle
utils/: Android.mk  build.gradle  build.gradle.kts
(+9841 files in other folders)
